# viriformat

./: Cargo.toml  README.md
src/: dataformat.rs  lib.rs
src/chess/: mod.rs  piece.rs  piecelayout.rs  types.rs
src/chess/board/: mod.rs  movegen.rs  validation.rs
src/dataformat/: marlinformat.rs
