[package]
name = "viriformat"
version = "2.0.1"
edition = "2021"
license = "MIT"
description = "A library for the data-representation used by the viridithas chess engine."

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
bulletformat = "1.7.0"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
